[package]
name = "stead-rent"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "stead_rent"

[features]
no-entrypoint = []
no-idl = []
devnet = ["anchor-spl/devnet"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
thiserror = "1.0"
